# version-checker

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  app.json  package-lock.json  package.json  pyproject.toml
INSTALL/: INSTALL.Heroku.md  INSTALL.UBUNTU1804.md  INSTALL.Ubuntu1804.WITH.mod_wsgi.md  INSTALL.Ubuntu1804.With.mod_wsgi.md  INSTALL.Ubuntu1804.md  webserver.wsgi.example
src/: bootstrap.py  manager.py  runserver.py
src/data/: software.py.example
src/instance/: development.cfg  heroku.cfg  production.cfg  production.cfg.example
src/lib/: misc_utils.py  svg.py
src/scripts/: __init__.py  create_user.py
src/web/: forms.py
src/web/models/: __init__.py  log.py  right_mixin.py  stat.py  user.py
src/web/static/css/: custom.css
src/web/templates/: edit_user.html  index.html  layout.html  stats.html
src/web/templates/admin/: edit_user.html  logs.html  stats.html  users.html
src/web/templates/errors/: 404.html  500.html  503.html
src/web/views/: __init__.py  admin.py  common.py  session_mgmt.py  stats.py  user.py  views.py
src/web/views/api/v1/: __init__.py  log.py
