[tool.poetry]
name = "version-checker"
version = "0.1.1"
description = ""
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "*"
Flask = "*"
Flask-SQLAlchemy = "*"
Flask-Login = "*"
Flask-Principal = "*"
Flask-WTF = "*"
Flask-Script = "*"
WTForms = "*"
flask-migrate = "*"
svgwrite = "*"
flask-csv = "*"
pycryptodome = "*"
flask-paginate = "*"
flask-restless = "*"
psycopg2-binary = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
